--- a/test/Payroll.Test/Payroll.Test.csproj
+++ b/test/Payroll.Test/Payroll.Test.csproj
@@ -12,12 +12,18 @@
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
-    <PackageReference Include="xunit" Version="2.5.3" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
+    <PackageReference Include="NUnit" Version="3.14.0" />
+    <PackageReference Include="NUnit.Analyzers" Version="3.9.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Using Include="Xunit" />
+    <Using Include="NUnit.Framework" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Payroll.Application\Payroll.Application.csproj" />
+    <ProjectReference Include="..\..\src\Payroll.Core\Payroll.Core.csproj" />
   </ItemGroup>
 
 </Project>
