build: add 'Bogus' nuget package for mock employee fields

--- a/test/Payroll.Test/Payroll.Test.csproj
+++ b/test/Payroll.Test/Payroll.Test.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\Payroll.Application\Payroll.Application.csproj" />
     <ProjectReference Include="..\..\src\Payroll.Core\Payroll.Core.csproj" />
+    <ProjectReference Include="..\TestUtilities\TestUtilities.csproj" />
   </ItemGroup>
 
 </Project>
