--- a/test/TestUtilities/TestUtilities.csproj
+++ b/test/TestUtilities/TestUtilities.csproj
@@ -11,4 +11,8 @@
       <ProjectReference Include="..\..\src\Payroll.Core\Payroll.Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Bogus" Version="35.6.1" />
+    </ItemGroup>
+
 </Project>
