--- a/test/TestUtilities/TestUtilities.csproj
+++ b/test/TestUtilities/TestUtilities.csproj
@@ -7,8 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\Payroll.Application\Payroll.Application.csproj" />
-      <ProjectReference Include="..\..\src\Payroll.Core\Payroll.Core.csproj" />
+      <ProjectReference Include="..\..\Source\Payroll.Application\Payroll.Application.csproj" />
+      <ProjectReference Include="..\..\Source\Payroll.Core\Payroll.Core.csproj" />
     </ItemGroup>
 
     <ItemGroup>
