fix(source): update references for `.Infrastructure`

--- a/Source/Payroll.Application/Payroll.Application.csproj
+++ b/Source/Payroll.Application/Payroll.Application.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Payroll.Core\Payroll.Core.csproj" />
+    <ProjectReference Include="..\Payroll.Infrastructure\Payroll.Infrastructure.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
